fixed z-index bug

--- a/unifr5x.less
+++ b/unifr5x.less
@@ -191,7 +191,6 @@
 */
 .dropdown-menu {
   background-color: @navbar_background_grey;
-  z-index: 0;
 }
 
 .dropdown-header {
